# torii-sdk-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bump.sh  pyproject.toml  regen.sh
.github/workflows/: ci.yml  release.yml
spec/: server-v1.json
src/torii_backend/: __init__.py  client.py  errors.py  fastapi.py  types.py  verify.py
tests/: patch_wire_fixtures.json  test_patch_semantics.py  test_patch_wire.py  test_verify.py
