[project]
name = "torii-backend"
version = "0.0.2"
description = "Backend SDK for torii — verify JWTs, manage users, react to events from your Python server."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Torii ApS" }]
keywords = ["torii", "auth", "jwt", "oidc", "backend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyjwt[crypto]>=2.8,<3.0",
    # Transitive deps of the openapi-generator output under
    # `torii_backend.generated`. We name them here explicitly so the
    # public dependency surface matches the published wheel.
    "urllib3>=2.1.0,<3.0.0",
    "pydantic>=2.11",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.7.1",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "fastapi>=0.100",
]

[project.urls]
Homepage = "https://torii.so"
Source = "https://github.com/Torii-ApS/torii-sdk-python"
Issues = "https://github.com/Torii-ApS/torii-sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torii_backend"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["src/torii_backend/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"] # line length is handled by formatter

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["src/torii_backend/generated/"]

[[tool.mypy.overrides]]
module = "torii_backend.generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
